# paperhawk

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  NOTICE.md  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/: README.md
.streamlit/: config.toml
app/: async_runtime.py  main.py  streaming.py
data/: sanctions_snapshot.json
docs/: AMD_DEPLOYMENT.md  ARCHITECTURE.md  HF_SPACE_DEFAULT_GETTING_STARTED.md  HUGGINGFACE_DEPLOYMENT.md  SUBMISSION.md  hf-space-deployment.md  qwen-vllm-deployment.md
domain_checks/: __init__.py  base.py  check_01_invoice_mandatory.py  check_02_tax_cdv.py  check_03_contract_completeness.py  check_04_proportionality.py  check_05_rounded_amounts.py  check_06_evidence_score.py  check_07_materiality.py  check_08_gdpr_28.py  check_09_dd_red_flags.py  check_10_incoterms.py  check_11_ifrs_har.py  check_12_duplicate_invoice.py  check_13_aml_sanctions.py  check_14_contract_dates.py
eval/: questions.json  run_eval.py
graph/: chat_graph.py  checkpointer.py  dd_graph.py  package_insights_graph.py  pipeline_graph.py
ingest/: docx_loader.py  image_loader.py  ocr.py  pdf_loader.py  tables.py  txt_loader.py
load/: benchmark.py  parallel_pipeline_bench.py
providers/: __init__.py  dummy_provider.py  embeddings.py  ollama_provider.py  vllm_provider.py
schemas/: __init__.py  contract.json  delivery_note.json  financial_report.json  flatten_universal.py  invoice.json  purchase_order.json  pydantic_models.py  universal.json
store/: __init__.py  chunking.py  hybrid_store.py
subgraphs/: extract_subgraph.py  ingest_subgraph.py  llm_risk_subgraph.py  rag_index_subgraph.py  rag_query_subgraph.py  risk_subgraph.py
test_data/: generate_samples.py
tests/: conftest.py
(+96 files in other folders)
